RESOLVED FIXED36060
[Qt] LayoutTests/fast/canvas/fillrect-gradient-zero-stops.html failed and skipped on Qt
https://bugs.webkit.org/show_bug.cgi?id=36060
Summary [Qt] LayoutTests/fast/canvas/fillrect-gradient-zero-stops.html failed and ski...
Chang Shu
Reported 2010-03-12 08:43:08 PST
This is a real failed case. Black color still shows up.
Attachments
fix patch (29.52 KB, patch)
2010-03-12 14:08 PST, Chang Shu
no flags
Chang Shu
Comment 1 2010-03-12 14:08:23 PST
Created attachment 50630 [details] fix patch
Holger Freyther
Comment 2 2010-03-14 19:05:16 PDT
Comment on attachment 50630 [details] fix patch Sounds good.
WebKit Commit Bot
Comment 3 2010-03-15 07:34:30 PDT
Comment on attachment 50630 [details] fix patch Clearing flags on attachment: 50630 Committed r55993: <http://trac.webkit.org/changeset/55993>
WebKit Commit Bot
Comment 4 2010-03-15 07:34:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.