2010-03-15  Shu Chang  <Chang.Shu@nokia.com>

Reviewed by Holger Freyther.

        [Qt] Change and add expected results after the fix and also remove the test from Skipped.
        https://bugs.webkit.org/show_bug.cgi?id=36060

        * platform/qt/Skipped:
        * platform/qt/fast/canvas/fillrect-gradient-zero-stops-expected.checksum: Added.
        * platform/qt/fast/canvas/fillrect-gradient-zero-stops-expected.png: Added.
        * platform/qt/fast/canvas/fillrect-gradient-zero-stops-expected.txt:
2010-03-15  Shu Chang  <Chang.Shu@nokia.com>

        Reviewed by Holger Freyther.

        [Qt] The behavior of QGradient with no stops is defined differently from HTML5 spec,
        where the latter requires the gradient to be transparent black. Explicitly added a
        transparent black color stop to match the HTML5 behavior.
        https://bugs.webkit.org/show_bug.cgi?id=36060

        * platform/graphics/qt/GradientQt.cpp:
        (WebCore::Gradient::platformGradient):

Canonical link: https://commits.webkit.org/47288@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55993 268f45cc-cd09-0410-ab3c-d52691b4dbfc